--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
             android:name=".sync.QuoteIntentService"
             android:exported="false"/>
 
+        <service
+            android:name=".sync.QuoteIntentServiceFirebase"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"></action>
+            </intent-filter>
+        </service>
+
         <provider
             android:name=".data.StockProvider"
             android:authorities="com.udacity.stockhawk"
@@ -44,6 +52,22 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity"></meta-data>
         </activity>
+
+        <receiver
+            android:name=".widget.StockListWidgetProvider"
+            android:label="@string/title_widget_list" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.udacity.stockhawk.ACTION_DATA_UPDATED" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                       android:resource="@xml/widget_stock_list" />
+        </receiver>
+        <service
+            android:name=".widget.StockListWidgetRemoteViewsService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
